# apps/api/internal/routes/routes.go
@@ -16,6 +16,8 @@ func SetupRoutes(router *gin.Engine, pool *pgxpool.Pool) {
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
 	userService := services.NewUserService(pool)
+	buildService := services.NewBuildService(pool)
+	templateService := services.NewTemplateService(pool)
 
 	users := router.Group("/users")
 	{
@@ -24,4 +26,17 @@ func SetupRoutes(router *gin.Engine, pool *pgxpool.Pool) {
 		users.DELETE("/:id", handlers.DeleteUser(userService)) // Protect later with authentication
 	}
 
+	templates := router.Group("/templates")
+	{
+		templates.POST("", handlers.CreateTemplate(templateService))
+		templates.GET("", handlers.ListTemplatesByUser(templateService))
+		templates.GET("/:template_id", handlers.GetTemplateByID(templateService))
+
+		builds := templates.Group("/:template_id/builds")
+		{
+			builds.POST("", handlers.CreateBuild(buildService))
+			builds.GET("", handlers.ListBuildsByTemplate(buildService))
+			builds.GET("/:build_id", handlers.GetBuildByID(buildService))
+		}
+	}
 }
